# GRC-Agent

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  NOTICE.md  README.md  REVIEWER_AUDIT.md  SECURITY.md  experiment_report.md  feedback_audit  gnu_native_helpers_reference.md  grc_agent.toml  linkedin_post.md  main.py  pyproject.toml  random_bit_generator.grc  untitled:plan-flowgraphSessionLoad.prompt.md  wireless_matrix_report.json
.antigravitycli/: 777e18e9-cce6-4a99-bce8-e94030e31caf.json
.github/workflows/: ci.yml
.opencode/plans/: multi-turn-eval-phases-4-6.md
PydanticAI_experiment/: METRICS.md  PLAN.md  TESTING_PLAN.md  grc_adapter.py  run.py  test_integration.py  test_unit.py  web_app.py
PydanticAI_experiment/output/: 01_add_throttle.md  02_update_sample_rate.md  03_disable_and_enable.md  04_add_and_remove_variable.md  05_full_rewire.md  06_query_knowledge_multiply.md  09_docs_stream_tags_concept.md  10_bypass_source_block.md  11_scoped_inspect_and_update.md  14_build_chain_from_scratch.md
PydanticAI_experiment/src/: grc_adapter.py  run.py  web_app.py
PydanticAI_experiment/tests/: conftest.py
R_test_results/: dsp_gauntlet.md  r0.json  r0_essential.json  r0_filter.json  r0_final.json  r0_grounded.json  r0_native.json  r0_nocap.json  r0_vector.json  r1.json  r1_essential.json  r1_filter.json  r1_filter_1.json  r1_filter_2.json  r1_final.json  r1_grounded.json  r1_native.json  r1_nocap.json  r1_vector.json  r2.json  scenario12.md
R_test_results/critiques/: dsp_gauntlet_critique.md  r0_release_critique.md  r1_release_critique.md  r2_release_critique.md  recommendations.md  scenario11_nbfm_critique.md  scenario12_fft_critique.md
R_test_results/rag/: after_full.json  after_phase1.json  before_fix.json
demo/remotion/: package-lock.json  package.json  tsconfig.json
docs/: 2B_CAPABILITY_PROFILE_V1.md  AGENT_FLOW_FINDINGS.md  AGENT_RUNTIME.md  AUDIT_PROMPT.md  AUTO_INSERT_BROADER_VALIDATION_V1.md  AUTO_INSERT_LIVE_EVAL_V1.md  AUTO_INSERT_RANKING_PARAM_AUDIT_V1.md  BACKLOG.md  BLIND_HARNESS_AUDIT.md  BLUEPRINT.md  CHANGELOG.md  CHANGE_GRAPH_REPAIR_FEEDBACK.md  CLARIFICATION_CONTRACT_V1.md  CLI_QUICKSTART.md  COMMUNITY.md  CURRENT_RELEASE_EVIDENCE.md  DEMO_VIDEO.md  GEMMA_E4B_Q4_BACKEND_TRIAL_V1.md  GNU_NATIVE_METHODS.md  GUI_QUICKSTART.md  HANDOFF.md  IMPLEMENTATION_REPORT.md  ISSUE_INTAKE.md  LLAMA_EVAL.md  LLAMA_EVAL_TRIM_V1.md  LOCAL_ALPHA_PILOT.md  MANUAL_EXTERNAL_TEST_CHECKLIST_V1.md  MODEL_CONTEXT_BIBLE.md  MODEL_EVAL.md  ONLINE_REVIEW_EVIDENCE_PACKET.md  PACKAGE_GUIDE.md  POST_FIX_SMOKE_V1.md  POST_PREFERRED_TYPE_SMOKE_V1.md  PREFERRED_TYPE_RECALL_FIX_V1.md  PRODUCTION_READINESS_AUDIT_PROMPT.md  PRODUCTION_READINESS_PHASE1.md  PRODUCTION_READINESS_PHASE10.md  PRODUCTION_READINESS_PHASE11.md  PRODUCTION_READINESS_PHASE12.md  PRODUCTION_READINESS_PHASE13.md  (+40 more)
docs/decisions/: README.md  agent_runtime_v1.md  structural_edits.md  structural_edits_foundations.md  structural_edits_policies.md
docs/phases/: README.md  phase_0_context_and_rules.md  phase_1_retrieval_index_search_grc.md  phase_2_block_describe.md  phase_3_session_graph_access.md  phase_4_validation_preflight.md  phase_5_transaction_editing.md  phase_6_agent_cli_integration.md
docs/refactor_plan/: phase_0_cleanup.md  phase_0_handoff.md  phase_1_handoff.md  phase_1_inspect_graph.md  phase_2_change_graph.md  phase_3_query_knowledge.md  phase_4_domain_models.md  phase_5_native_adapter.md  phase_6_gut_session.md  phase_7_gui_burn.md  plan_context.md
docs/wiki_gnuradio_org/: AGC.md  ALSAPulseAudio.md  AcademicPapers.md  Adaptive_Algorithm.md  Add.md  Archive_of_Hack_Fests.md  Async_CRC32.md  Audio_Sink.md  Audio_Source.md  B200-B205mini_FM_Receiver.md  Band-pass_Filter_Taps.md  Band_Pass_Filter.md  Bandlimited_threshold_detector.md  Basic_OFDM_Tutorial.md  Binary_Files_for_DSP.md  Binary_Slicer.md  BlocksCodingGuide.md  Burst_Shaper.md  CRC_Append.md  CRC_Check.md  Chat.md  Coding_guide_impl.md  Constellation_Decoder.md  Converting_Data_Types.md  Creating_C++_OOT_with_gr-modtool.md  Creating_Python_OOT_with_gr-modtool.md  Creating_Your_First_Block.md  CustomBuffers.md  Default_Header_Format_Obj..md  Designing_Filter_Taps.md  DevelopersCalls.md  DevelopingWithGit.md  Development.md  E310_FM_Receiver.md  Embedded_Python_Block.md  File_transfer_using_Packet_and_BPSK.md  Flowgraph.md  Flowgraph_Python_Code.md  Frequency_Shifting.md  GNU_Radio_3.10_OOT_Module_Porting_Guide.md  (+60 more)
examples/: blank.grc  dial_tone.grc  notch_test.grc
experiments/: README.md
experiments/inspect_eval/: final_review.py  generate_outputs.py  prompts.py  review_outputs.py
reports/: BETA_FINAL_TESTING_HANDOFF.md  BETA_PACKAGING_HARDENING_STATUS.md  BETA_READY_STATUS.md  LOCAL_ALPHA_RELEASE_TAG.md  MAINTENANCE_STATUS_2026-05-03.md  MVP_WRAPPER_EFFICIENCY_REPORT.md  RELEASE_CANDIDATE_STATUS.md  RELEASE_READY_LOCAL_ALPHA.md
scripts/: __init__.py  broader_validation.py  check_env.py  clean_cache.py  llama_reliability_matrix.py  regenerate_vectors.py
scripts/demo/: __init__.py  (+2 more)
tests/: __init__.py  conftest.py  live_reliability_scenarios.py  llama_launcher_support.py  run_wireless_matrix.py  test_agent.py  test_agent_flow_engine_core.py  test_agent_flow_live.py  test_agent_flow_metrics.py  test_agent_loop_fixes.py  test_agentic_workflow_insert.py  test_block_semantics_cache.py  test_buffer_fix_simulation.py  test_button_integration.py  test_capabilities.py  test_catalog_vector.py  test_catalog_vector_live.py  test_catalog_vector_unit.py  test_change_graph_flat_batch.py  test_change_graph_hints.py  test_change_graph_phases.py  test_clarification_contract.py  test_clarification_ux.py  test_cli_model.py  test_cli_setup.py  test_config.py  test_corpus_v2.py  test_doc_answer_unit.py  test_docs_answer_advisor.py  test_doctor.py  test_dogfood.py  test_domain_models.py  test_env_model_config.py  test_exec_monitor.py  test_flowgraph_session.py  test_flowgraph_session_imports.py  test_frontend.py  test_generalized_add_block.py  test_gnu_loader.py  test_graph_safety_regressions.py  (+55 more)
(+599 files in other folders)
