[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grc-agent"
version = "0.1.0"
description = "Local GNU Radio Companion .grc assistant."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "MIT"}
authors = [{name = "Qoherent"}]
keywords = [
    "gnu-radio",
    "sdr",
    "llm",
    "agent",
    "code-generation",
    "local-llm",
    "ollama",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "ToolAgents>=0.3.0,<0.4.0",
    "openai>=1.50",
    "python-dotenv>=1.0",
    "httpx>=0.27",
    "pydantic>=2.0",
    "pyyaml>=6.0.3",
    "sqlite-vec>=0.1.9",
    "tomlkit>=0.15.0",
    "jsonschema>=4.26.0",
    "tenacity>=9.1.4",
]

[project.optional-dependencies]
gui = [
    "PySide6>=6.5.0",
    "Pygments>=2.17.0",
]
dev = [
    "ruff>=0.15.9",
    "ruamel-yaml>=0.19.1",
    "pytest>=8.0.0",
    "pytest-qt>=4.4.0",
]

[project.urls]
Homepage = "https://github.com/qoherent/grc-agent"
Repository = "https://github.com/qoherent/grc-agent"
Issues = "https://github.com/qoherent/grc-agent/issues"
Changelog = "https://github.com/qoherent/grc-agent/releases"

[project.gui-scripts]
grc-agent-gui = "grc_agent_gui.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/grc_agent", "src/grc_agent_gui"]

[tool.hatch.build.targets.wheel.force-include]
"docs/wiki_gnuradio_org" = "grc_agent/wiki_gnuradio_org"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["grc_agent", "grc_agent_gui", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011"]  # asserts are fine in tests
"src/**" = ["E402"]  # module-level imports after logger are intentional
"tests/conftest.py" = ["E402"]  # env-var setup must precede imports

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
qt_api = "pyside6"
markers = [
    "gui: tests that require a PySide6 QApplication",
    "live_rag: tests that touch the real vector DB / live ollama (only run under GRC_AGENT_LIVE_RAG=1)",
    "grc_native: tests that require the GNU Radio native GRC platform (apt install gnuradio)",
]
