[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "grc-agent"
version = "0.1.0"
description = "Autonomous AI agent for GNU Radio Companion — reasons over, edits, and validates .grc flowgraphs, built on PydanticAI."
readme = {file = "README.md", content-type = "text/markdown"}
license = {text = "AGPL-3.0-only"}
authors = [{name = "Mahmoud Sallam", email = "mahmoud.sallam@mail.mcgill.ca"}, {name = "Qoherent"}]
keywords = [
    "gnu-radio",
    "sdr",
    "llm",
    "agent",
    "code-generation",
    "local-llm",
    "ollama",
    "rag",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Code Generators",
    "Topic :: Scientific/Engineering :: Electronic Design Automation (EDA)",
]
requires-python = ">=3.12,<3.14"
dependencies = [
    "openai>=1.50",
    "httpx>=0.27",
    "pydantic>=2.0",
    "sqlite-vec>=0.1.9,<0.2",
    "tenacity>=9.1.4",
    "pydantic-ai[web-fetch]>=2.7.0,<3",
    "pydantic-graph>=2.7.0,<3",
    "beautifulsoup4>=4.12",
    "python-dotenv>=1.0",
    "grandalf>=0.8",
    "gbulb>=0.6.6",
    "markdown-it-py>=3.0.0",
    "ddgs>=9.0",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.15",
    "ruff>=0.15.9",
    "pytest>=8.0.0",
    "playwright>=1.48",
]

[project.scripts]
grc-agent = "grc_agent.desktop_app:main"

[project.urls]
Homepage = "https://github.com/qoherent/grc-agent"
Repository = "https://github.com/qoherent/grc-agent"
Issues = "https://github.com/qoherent/grc-agent/issues"

[tool.hatch.build.targets.sdist]

[tool.hatch.build.targets.sdist.force-include]
"docs/wiki_gnuradio_org" = "docs/wiki_gnuradio_org"

[tool.hatch.build.targets.wheel]
packages = ["src/grc_agent"]

[tool.hatch.build.targets.wheel.force-include]
"docs/wiki_gnuradio_org" = "grc_agent/docs/wiki_gnuradio_org"

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]
# GNU-Radio-generated flowgraph companion scripts, not hand-authored source —
# linting/rewriting them would make them diverge from GRC's own codegen output.
extend-exclude = ["tests/data/*.py"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "C901", "A", "SIM", "ARG"]
ignore = [
    "E501",  # line-too-long (handled by formatter)
]

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = false
disallow_any_unimported = false
check_untyped_defs = false
warn_return_any = false
warn_unused_ignores = true
strict_optional = true
namespace_packages = false
no_implicit_optional = false

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
